# livelike

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.ci/: py311_livelike_latest.yaml  py311_livelike_latest.yml  py311_livelike_min.yaml  py311_livelike_min.yml  py311_livelike_oldest.yaml  py312_livelike_dev.yaml  py312_livelike_dev.yml  py312_livelike_latest.yaml  py312_livelike_latest.yml  py312_pandas2_livelike_latest.yaml  py313_livelike_latest.yaml  py314_livelike_dev.yaml  py314_livelike_latest.yaml  py314_pandas2_livelike_latest.yaml
.github/workflows/: continuous_integration.yml
livelike/: __init__.py  _attribution.py  acs.py  attribution.py  config.py  est.py  homesim.py  multi.py  pums.py  sae.py  utils.py
livelike/data/: PUMA2010_PUMA2020_crosswalk.csv  constraints.csv  rel_ct_2020.parquet
livelike/tests/: conftest.py  test_acs_build_acs_sf_inputs.py  test_acs_build_puma.py  test_acs_build_puma_incremental.py  test_acs_cache.py  test_acs_constraint_ordering.py  test_acs_constraint_uni_pop_errors.py  test_acs_extract_geographies.py  test_acs_extract_pums.py  test_acs_get_vre_tables.py  test_acs_helpers.py  test_acs_puma_super_tracts.py  test_acs_select_constraints.py  test_acs_supplementary_api_wrappers.py  test_attribution.py  test_est.py  test_homesim.py  test_homesim_pop_synthesis.py  test_multi_extract_pums.py  test_multi_make_pumas.py  test_multi_make_replicate_pumas.py  test_multi_synthesize.py  test_notebook_solutions.py  test_pums.py  test_utils.py
livelike/tests/attribution_eval_data/: eval_data_household.parquet  eval_data_person.parquet
livelike/tests/buildup_0100100/: README.md  est_g2.parquet  est_ind.parquet  pums_segment_ids.parquet  sporder.parquet
livelike/tests/buildup_0100200/: README.md  almat.parquet  est_g2.parquet  est_ind.parquet  pums_segment_ids.parquet  sporder.parquet
livelike/tests/notebook_pmedm_solutions/: notebook_pmedm_solutions.pkl
livelike/tests/pop_synthesis_input/: gph.csv  gpp.csv
livelike/tests/prepared_constraints/: commute.csv  emp_stat.csv  grade.csv  group_quarters_pop.csv  housing_units.csv  occhu.csv  population.csv  school.csv  sex.csv  sexcw.csv  sexnaics.csv  sexocc.csv  tenure_vehicles.csv  travel.csv  veh_occ.csv  worked.csv
livelike/tests/puma/: est_bg.parquet  est_ind.parquet  est_trt.parquet  se_bg.parquet  se_trt.parquet  sporder.parquet  wt.parquet
livelike/tests/supplementary_api_wrapper_extracts/: ext1.parquet  ext2.parquet  ext3.parquet  ext4.parquet
livelike_acs_cache/: temp.txt
notebooks/: README.md  basic_usage.ipynb  basic_usage_2020s.ipynb  basic_usage__pums_replicates.ipynb  multi_puma.ipynb  tract_supertract_2019.ipynb  tract_supertract_2023.ipynb
publication_materials/: README.md
publication_materials/usrse_2025/notebook/: ensembles_usrse_2025.ipynb  py312_livelike_usrse_2025_env.yaml
publication_materials/usrse_2025/notebook/replicate_demo_cache/: constraints_4701501_bg_est.parquet  constraints_4701501_bg_moe.parquet  constraints_4701501_household.parquet  constraints_4701501_person.parquet  constraints_4701501_trt_est.parquet  constraints_4701501_trt_moe.parquet  vre_2023_47_B01001.parquet  vre_2023_47_B11002.parquet
utilities/: prep_test_build_puma.py  prep_test_notebook_solutions.py  regenerate_test_data.sh  regenerate_test_puma_super_tracts.ipynb  run_tests.sh
