[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "livelike"
dynamic = ["version"]
authors = [
    {name = "Jospeh V. Tuccillo", email = "tuccillojv@ornl.gov"},
    {name = "James D. Gaboardi", email = "gaboardijd@ornl.gov"},
]
maintainers = [
    {name = "Jospeh V. Tuccillo"},
    {name = "James D. Gaboardi"},
]
#license = {text = ""}
description = "A Population Synthesizer for High Demographic Resolution Analysis."
keywords = ["population-synthesis", "high-demographic-resolution"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "awkward>=2.6",
    "deprecation",
    "dill",
    "geopandas>=1.0",
    "libpysal>=4.12",
    "multiprocess>=0.70",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow",
    "pygris>=0.1.6",
    "scipy>=1.12",
    "shapely>=2.0",
]

[project.urls]
Home = "https://github.com/likeness-pop"
Repository = "https://github.com/likeness-pop/livelike"

[project.optional-dependencies]
ecosystem-deps = [
    "likeness_vitals @ git+https://github.com/likeness-pop/likeness-vitals.git@develop",
    # -- OPTIONAL -- notebooks, development, etc. -- not used in codebase itself
    "pmedm_legacy @ git+https://github.com/likeness-pop/likeness/pmedm_legacy.git@develop",  # needs special install - see `likeness/pmedm_legacy` documentation
    "pymedm @ git+https://github.com/likeness-pop/likeness/pymedm.git@develop",
]
tests = [
    "jax>=0.4.31", # [==0.4.31] for GPU/CUDA; [>=0.5.3] for CPU
    "jaxlib>=0.4.31", # [==0.4.31] for GPU/CUDA; [>=0.5.3] for CPU
    "jaxopt>=0.8.3",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "setuptools_scm",
    "watermark",
]
all = ["livelike[ecosystem-deps,tests]"]

[tool.setuptools.packages.find]
include = [
    "livelike",
    "livelike.*",
]

[tool.coverage.run]
omit = ["livelike/tests/*"]
source = ["livelike"]

[tool.coverage.report]
exclude_lines = ["except ImportError"]
ignore_errors = true
omit = ["livelike/tests/*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_file = "pytest.log"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = ["F401"] # unused-import
"*.ipynb" = [
    "F401",
    "C408", # Unnecessary `dict` call (rewrite as a literal)
]
